--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,8 @@
             android:exported="false" />
         <activity android:name=".examples.navwithargs.NavigationWithArgsActivity"
             android:exported="false" />
+        <activity android:name=".examples.nestedgraph.NestedGraphActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
